Tue Sep 25 18:45:10 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups.c: Clean up after ourselves.

Tue Sep 25 18:33:49 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/ietfmib.h: (Bernd Markgraf)
   - addition of battery temperature
   - addition of input.quality via UPS-MIB::upsInputLineBads values
     >0 showing line failures
   - correct OID to query number of input phases (now ietf reports
     3 phases on my bunch correctly)
   - corrected OID to query output current
   - corrected multiplier for output.realpower (reported in Watts, so 1)

Mon Sep 24 18:01:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - conf/upsmon.conf.sample: List the default values for NOTIFYMSG
   and NOTIFYFLAG. [Alioth Feature Requests #302016]

Sun Sep 23 18:34:20 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/cps-hid.c: Add server side variables.
 - scripts/subdriver/path-to-subdriver.sh: Add server side variables,
   sort the HID paths alphabetically and remove duplicates.

Sat Sep 22 19:22:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/cps-hid.[ch]: Created a new subdriver for CyberPower HID
   UPS systems.
 - drivers/Makefile.am,usbhid-ups.c: Added new CyberPower subdriver.
 - drivers/apc-hid.c: Removed CyberPower from this subdriver.
 - scripts/subdriver/path-to-subdriver.sh: Some minor corrections to
   make the output compliant to what we expect.

Sat Sep 22 17:59:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c: Packetizing is already done by the libusb
   library, so we don't need to duplicate that.

Sat Sep 22 07:14:39 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 * drivers/megatec_usb.c: merged Arjen de Korte's changes in krauler
   subdriver with slight modifications:
   - commands are now stored in a table, making it simplier to process
     them
   - switched to libusb.c API completely

Mon Sep 17 19:09:47 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
